# docs/swagger.json
@@ -4,6 +4,133 @@
         "contact": {}
     },
     "paths": {
+        "/follow": {
+            "post": {
+                "description": "With params follows a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "follow"
+                ],
+                "summary": "Follow a user",
+                "parameters": [
+                    {
+                        "description": "Follow Model",
+                        "name": "follow",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Follow"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Follow"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Route to unfollow a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "follow"
+                ],
+                "summary": "Unfollow a user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/games": {
             "get": {
                 "description": "Route to show a game",
@@ -782,6 +909,20 @@
         }
     },
     "definitions": {
+        "models.Follow": {
+            "type": "object",
+            "properties": {
+                "followed_id": {
+                    "type": "integer"
+                },
+                "following_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Game": {
             "type": "object",
             "properties": {
@@ -802,6 +943,9 @@
                 },
                 "reviews": {
                     "type": "integer"
+                },
+                "top_adr": {
+                    "type": "string"
                 }
             }
         },
@@ -842,6 +986,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "image_adr": {
+                    "type": "string"
+                },
                 "opinion": {
                     "type": "string"
                 },
@@ -856,6 +1003,21 @@
                 "birth_date": {
                     "type": "string"
                 },
+                "discord_user": {
+                    "type": "string"
+                },
+                "epic_user": {
+                    "type": "string"
+                },
+                "followed": {
+                    "type": "integer"
+                },
+                "following": {
+                    "type": "integer"
+                },
+                "github_user": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -866,6 +1028,12 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "steam_user": {
+                    "type": "string"
+                },
+                "twitch_user": {
                     "type": "string"
                 },
                 "user_name": {
